<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/delete_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_selected_reports"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_permanently_delete_the_selected_intruder_reports"
        android:textSize="14sp"
        android:layout_marginBottom="16dp" />

    <!-- Buttons Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            android:text="@string/ok"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/red" />
    </LinearLayout>

</LinearLayout>
