<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/black">

    <!-- Top Heading Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="18dp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_back"
            android:padding="6dp"
            android:contentDescription="@string/back"
            app:tint="@android:color/white" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:paddingStart="12dp" />

        <ImageView
            android:id="@+id/btnInfo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_info"
            android:padding="6dp"
            android:contentDescription="@string/info"
            app:tint="@android:color/white" />

    </LinearLayout>

    <!-- Notification Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="12dp">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_notifications"
            app:tint="@android:color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show_notification_when_app_is_running"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_marginStart="12dp" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switchNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <!-- Uninstall App Row -->
    <LinearLayout
        android:id="@+id/rowUninstall"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12dp">

        <ImageView
            android:id="@+id/ivUninstallIcon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_uninstall"
            app:tint="@android:color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/uninstall_app"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:paddingStart="12dp" />
    </LinearLayout>

</LinearLayout>
